K8S/dotnet-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet
  template:
    metadata:
      labels:
        app: dotnet
    spec:
      imagePullSecrets:
        - name: my-registry-secret
      containers:
        - name: dotnet
          image: registry2.halitkalayci.com/example-api2
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dotnet
  namespace: default
spec:
  selector:
    app: dotnet
  type: NodePort
  ports:
  - name: dotnet
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 32500
---
