K8S/registry-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: registry-namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: registry-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry:2
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: registry-storage
              mountPath: "/var/lib/registry"
      volumes:
        - name: registry-storage
          persistentVolumeClaim:
            claimName: registry-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: registry-namespace
spec:
  selector:
    app: registry
  type: NodePort
  ports:
  - name: registry
    protocol: TCP
    port: 80
    targetPort: 5000
    nodePort: 30001
---
